--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -190,21 +190,39 @@ html(lang="es")
                                             | 62
                                         h4 años de 
                                             br 
+                                    
                                             | excelencia
+                                    //- LÍNEA PARA MÓVIL
+                                    .sliderItemInfo2--line-movile
                                     h3.sliderItemInfo2--desc Formamos profesionales de vanguardia que lideran el sector salud.
+                                    
+                                    //- LÍNEA PARA DESKTOP
+                                    .sliderItemInfo2--line-desktop
                             .slider__item2.swiper-slide
                                 .sliderItemInfo2
                                     .sliderItemInfo2--top
                                         h3  
                                             span +
                                             | 200
-                                        h4 convenios internacionales
+                                        h4 convenios
+                                            br 
+                                    
+                                            | internacionales
+                                    //- LÍNEA PARA MÓVIL
+                                    .sliderItemInfo2--line-movile
                                     h3.sliderItemInfo2--desc Accede a intercambios en las universidades más prestigiosas a nivel mundial.
+                                   
+                                    //- LÍNEA PARA DESKTOP
+                                    .sliderItemInfo2--line-desktop
                             .slider__item2.swiper-slide
                                 .sliderItemInfo2
                                     .sliderItemInfo2--top
                                         h4.sliderItemInfo2--top--final Formación especializada
+                                    //- LÍNEA PARA MÓVIL
+                                    .sliderItemInfo2--line-movile
                                     h3.sliderItemInfo2--desc Somos la universidad N.° 1 en Salud, con docentes de reconocida trayectoria, activos en el campo y comprometidos con tu formación.
+                                   
+                                   
                     .swiper-arrows2
                         h3 |
                         .swiper-button-prev4
