--- a/src/scss/bloque6/_bloque6.scss
+++ b/src/scss/bloque6/_bloque6.scss
@@ -2,9 +2,7 @@
 @use 'base/mixins' as m;
 
 .bloque6 {
-    // background-color: rgba(128, 0, 128, 0.227);
     height: auto;
-    // padding: 7rem 0;
     position: relative;
     background-color: white;
     overflow: hidden;
@@ -17,9 +15,8 @@
 .bloque6ShieldBack {
     width: 100%;
     position: absolute;
-    bottom: 0;
-    z-index: 1;
     bottom: -15rem;
+    z-index: 1;
     @include m.phone_375 {
         bottom: -18rem;
     }
@@ -92,7 +89,6 @@
 }
 
 .bloque6ContainerTop {
-    // background-color: green;
     height: auto;
     display: grid;
     justify-items: center;
@@ -101,6 +97,10 @@
     @include m.tablet_760 {
         display: block;
         justify-items: flex-start;
+    }
+    @include m.desktop_1020 {
+        text-align: left;
+        padding-left: 3rem;
     }
     h3, h4 {
         text-align: center;
@@ -117,19 +117,15 @@
         padding: 0;
         margin: 0;
         @include m.tablet_768 {
-        font-size: 3rem;
-
+            font-size: 3rem;
         }
         @include m.desktop_1020 {
-        font-size: 3.8rem;
-        width: 40rem;
-            
-            
+            font-size: 4.2rem;
+            width: 45rem;
         }
         @include m.desktop_1120 {
-            width:40rem;
+            width: 45rem;
         }
-        
         span {
             font-weight: 800;
         }
@@ -138,13 +134,12 @@
         font-weight: 500;
         font-size: 1.5rem;
         @include m.tablet_760 {
-            // font-size: 1.5rem;
             width: 70%;
             padding-top: 1rem;
         }
         @include m.desktop_1020 {
             width: 58%;
-            font-size: 1.8rem;
+            font-size: 2rem;
         }
     }
 }
@@ -166,7 +161,6 @@
 }
 
 .bloque6Image  {
-    // background-color: rgba(0, 128, 0, 0.429);
     margin-top: 6rem;
     text-align: center;
     @include m.tablet_768 {
@@ -175,14 +169,7 @@
         bottom: 11rem;
         left: -17%;
     }
-    @include m.tablet_840 {
-        left: calc(100% - 103%);
-    }
-    @include m.tablet_920 {
-        left: -1%
-    }
     @include m.desktop_1020 {
-        // background-color: red;
         left: 0;
         width: 100%;
     }
@@ -198,7 +185,6 @@
 }
 
 .bloque6Description {
-    // background-color: purple;
     height: auto;
     display: grid;
     grid-template-rows: auto 22rem;
@@ -209,124 +195,10 @@
         grid-template-rows: auto 13rem;
         width: 35rem;
         right: -5rem;
-        // bottom: 10rem;
-    }
-    @include m.desktop_1020 {
-        // bottom: 5rem;
-        width: 38rem;
-    }
-    @include m.desktop_1100 {
-        width: 43rem;
-    }
-    @include m.desktop_1200 {
-        width: 40rem;
-    }
-    @include m.desktop_1300 {
-        width: 41rem;
-    }
-    @include m.desktop_1400 {
-        width: 48rem;
-    }
-    @include m.desktop_1500 {
-        width: 53rem;    
-    }
-    @include m.desktop_1600 {
-        width: 58rem;
-    }
-    @include m.desktop_1700 {
-        width: 67rem;    
-    }
-    @include m.desktop_1800 {
-        width: 52rem;
-    }
-    @include m.desktop_1900 {
-        width: 58rem;
-    }
-    .bloque6DescriptionTop {
-        // background-color: orange;
-        display: grid;
-        justify-items: center;
-        position: relative;
-        color: black;
-        h3, h4 {
-            margin: 0;
-            width: 80%;
-        }
-        h3 {
-            font-size: 2rem;
-            text-align: center;
-            font-weight: 500;
-            @include m.desktop_1020 {
-            text-align: start;
-            margin-top: 5rem;
-            }
-            @include m.desktop_1200 {
-               
-                margin-top: 10rem;
-                }
-
-
-            }
-        h4 {
-            font-size: 1.6rem;
-            padding: 1rem 0;
-            text-align: center;
-            line-height: 1;
-            
-            @include m.desktop_1020 {
-            text-align: start;
-            width: 20rem;
-            margin-right:10rem;
-            }
-
-            @include m.desktop_1100{
-            margin-right:14rem;
-            }
-
-            @include m.desktop_1200{
-            margin-right:12rem;
-            }
-            @include m.desktop_1400{
-                margin-right:18rem;
-                }
-            @include m.desktop_1500{
-            margin-right:22rem;
-            }
-            @include m.desktop_1500{
-            margin-right:23rem;
-            }
-            @include m.desktop_1700{
-                margin-right:33rem;
-                }
-           
-            
-        }
-    }
-    .bloque6DescriptionBottom {
-        padding: 1rem;
-        display: grid;
-        justify-items: center;
-        color: black;
-        h3 {
-            margin: 0;
-            width: 70%;
-            text-align: center;
-            font-weight: 600;
-            line-height: 1.4;
-            font-size: 1.1rem;
-           @include m.tablet_768 {
-            font-size: 1.3rem;
-           }
-           @include m.desktop_1020 {
-            text-align: start;
-            width: 83%;
-            }
-        }
     }
 }
 
 .bloque6DescriptionTopSeparator {
-    // background-color: green;
     width: 100%;
     position: absolute;
     height: 3rem;
@@ -338,7 +210,6 @@
         padding-left: 10%;
     }
     .bloque6DescriptionTopSeparatorBlock {
-        // background-color: pink;
         margin-top: 20rem;
         width: 18rem;
         height: 100%;
