--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -217,7 +217,10 @@ html(lang="es")
                             .slider__item2.swiper-slide
                                 .sliderItemInfo2
                                     .sliderItemInfo2--top
-                                        h4.sliderItemInfo2--top--final Formación especializada
+                                        h4.sliderItemInfo2--top--final 
+                                            | Formación 
+                                            br
+                                            | especializada
                                     //- LÍNEA PARA MÓVIL
                                     .sliderItemInfo2--line-movile
                                     h3.sliderItemInfo2--desc Somos la universidad N.° 1 en Salud, con docentes de reconocida trayectoria, activos en el campo y comprometidos con tu formación.
