--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -217,10 +217,10 @@ html(lang="es")
                             .slider__item2.swiper-slide
                                 .sliderItemInfo2
                                     .sliderItemInfo2--top
-                                        h4.sliderItemInfo2--top--final 
-                                            | Formación 
-                                            br
-                                            | especializada
+                                        h4.sliderItemInfo2--top--final Formación especializada
+                                            //- | Formación 
+                                            //- br
+                                            //- | especializada
                                     //- LÍNEA PARA MÓVIL
                                     .sliderItemInfo2--line-movile
                                     h3.sliderItemInfo2--desc Somos la universidad N.° 1 en Salud, con docentes de reconocida trayectoria, activos en el campo y comprometidos con tu formación.
@@ -409,12 +409,12 @@ html(lang="es")
                                                     | en Per&uacute;
                                                     br
                                                     span Ranking Hist&oacute;rico de Instituciones Universitarias
-                        .swiper-arrows3
-                            h3 |
-                        .swiper-button-prev5
-                            img(src='https://lp.cayetano.edu.pe/wp-content/uploads/2024/08/egel_enfermeria_arrow_left_black.webp' loading='lazy' alt='egel_enfermeria_arrow_left_black')
-                        .swiper-button-next5
-                            img(src='https://lp.cayetano.edu.pe/wp-content/uploads/2024/08/egel_enfermeria_arrow_rigjt_black.webp' loading='lazy' alt='egel_enfermeria_arrow_rigjt_black')
+                    .swiper-arrows3
+                        h3 |
+                    .swiper-button-prev5
+                        img(src='https://lp.cayetano.edu.pe/wp-content/uploads/2024/08/egel_enfermeria_arrow_left_black.webp' loading='lazy' alt='egel_enfermeria_arrow_left_black')
+                    .swiper-button-next5
+                        img(src='https://lp.cayetano.edu.pe/wp-content/uploads/2024/08/egel_enfermeria_arrow_rigjt_black.webp' loading='lazy' alt='egel_enfermeria_arrow_rigjt_black')
         .bloque9
             .bloque9Container
                 img.bloque9Back(src="https://lp.cayetano.edu.pe/wp-content/uploads/2024/08/egel_enfermeria_image12.webp", loading="lazy" alt="egel_enfermeria_image12")
