--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -234,7 +234,7 @@ html(lang="es")
                             img(src="https://upch-repo-comercial.s3.dualstack.us-east-1.amazonaws.com/06-03-25/pge-adm-salud-arrow-right-black.webp", loading="lazy", alt="egel_enfermeria_arrow_rigjt_black")
                 //- .swiper-pagination3
         .bloque6
-            img.bloque6ShieldBack(src="https://lp.cayetano.edu.pe/wp-content/uploads/2024/09/pge-educacion-bloque6-shield-movil.webp", loading="lazy" alt="egel_enfermeria_image9")
+            img.bloque6ShieldBack(src="https://upch-repo-comercial.s3.dualstack.us-east-1.amazonaws.com/17-03-25/pge-educacion-bloque6-shield-movil.webp", loading="lazy" alt="egel_enfermeria_image9")
             img.bloque6ShieldBackDesktop(src="", loading="lazy" alt="egel_enfermeria_image9")
             .bloque6Container
                 .bloque6ContainerTop
@@ -252,12 +252,18 @@ html(lang="es")
                             h4 Director de la Facultad de Educación en PGE
                         .bloque6DescriptionBottom
                             h3 “Estudiar en Cayetano te permitirá potenciar la enseñanza y lograr resultados significativos en el aprendizaje de tus niñas y niños. Además, fortalecerás tu vocación con un liderazgo pedagógico comprometido con su bienestar y la excelencia educativa”.
+        //- .bloque7
+        //-     .bloque7Container
+        //-         h3 Estamos entre los mejores de Latinoamérica y el Mundo
+        //-     video(autoplay='true' loop)
+        //-         source(src='https://lp.cayetano.edu.pe/wp-content/uploads/2024/11/video_mundo_pge.mp4' loading="lazy" type='video/mp4')
+        //-         |   Your browser does not support the video tag.
+        
         .bloque7
             .bloque7Container
                 h3 Estamos entre los mejores de Latinoamérica y el Mundo
-            video(autoplay='true' loop)
-                source(src='https://lp.cayetano.edu.pe/wp-content/uploads/2024/11/video_mundo_pge.mp4' loading="lazy" type='video/mp4')
-                |   Your browser does not support the video tag.
+            img(src='https://upch-repo-comercial.s3.dualstack.us-east-1.amazonaws.com/17-03-25/mundo-video-gif-1.gif' loading="lazy" alt="Animación representativa")
+
         .bloque8
             .bloque8Container
                 .bloque8Title
@@ -436,13 +442,28 @@ html(lang="es")
                                 .slider__item6.swiper-slide
                                     .sliderItemInfo6
                                         .sliderItemInfo6Container
-                                            img(src="https://lp.cayetano.edu.pe/wp-content/uploads/2024/08/egel_enfermeria_image11.webp", alt="egel_enfermeria_image11" loading="lazy")
-                                            h3 Sede Miraflores
+                                            img(src="https://upch-repo-comercial.s3.dualstack.us-east-1.amazonaws.com/17-03-25/central.webp", alt="egel_enfermeria_image11" loading="lazy")
+                                            h3 Campus Central
+                                .slider__item6.swiper-slide
+                                    .sliderItemInfo6
+                                        .sliderItemInfo6Container
+                                            img(src="https://upch-repo-comercial.s3.dualstack.us-east-1.amazonaws.com/17-03-25/la-molina.webp", alt="egel_enfermeria_image11" loading="lazy")
+                                            h3 Campus La Molina 
                                 .slider__item6.swiper-slide
                                     .sliderItemInfo6
                                         .sliderItemInfo6Container
                                             img(src="https://lp.cayetano.edu.pe/wp-content/uploads/2024/08/egel_enfermeria_image11.webp", alt="egel_enfermeria_image11" loading="lazy")
-                                            h3 Sede Miraflores
+                                            h3 Sede Miraflores 
+                                .slider__item6.swiper-slide
+                                    .sliderItemInfo6
+                                        .sliderItemInfo6Container
+                                            img(src="https://upch-repo-comercial.s3.dualstack.us-east-1.amazonaws.com/17-03-25/estomatologia.webp", alt="egel_enfermeria_image11" loading="lazy")
+                                            h3 Sede San Isidro 
+                                .slider__item6.swiper-slide
+                                    .sliderItemInfo6
+                                        .sliderItemInfo6Container
+                                            img(src="https://lp.cayetano.edu.pe/wp-content/uploads/2024/08/egel_enfermeria_image11.webp", alt="egel_enfermeria_image11" loading="lazy")
+                                            h3 Sede Santa María  
                         .swiper-arrows4
                             h3 |
                         .swiper-button-prev6
