--- a/src/scss/bloque7/_bloque7.scss
+++ b/src/scss/bloque7/_bloque7.scss
@@ -1,28 +1,191 @@
 @use 'base/variables' as v;
 @use 'base/mixins' as m;
 
+// .bloque7 {
+//     // height:auto;
+//     // background-color: red;
+//     overflow: hidden;
+//     position: relative;
+//     height: 60rem;
+//     background-color: black; // Previene espacios grises visibles
+//     @include m.phone_375 {
+//         height: 70rem;
+//     }
+//     @include m.phone_390 {
+//         height: 80rem;
+//     }
+//     // @include m.desktop_1120 {
+//     //     height: 75rem; 
+//     // }
+//     // @include m.desktop_1180 {
+//     //     height: 78rem;   
+//     // }
+//     // @include m.desktop_1200 {
+//     //     max-height: 80rem; 
+//     // }
+
+    
+//     @include m.desktop_1120 {
+//         height: 83rem;
+//     }
+//     @include m.desktop_1180 {
+//         height: 87rem;   
+//     }
+//     @include m.desktop_1200 {
+//         max-height: 85rem;
+//         // transform: scale(1.3);
+//     }
+//     @include m.desktop_1500 {
+//         max-height: 87rem;
+//     }
+//     @include m.desktop_1560 {
+//         max-height: 90rem;
+//     }
+//     @include m.desktop_1660 {
+//         // max-height: 20%;
+//         min-height: 110rem;  
+//     }
+//     video {
+//         // height: 100%;
+//         // width: 100%;
+//         // transform: scale(1.9);
+//         // z-index: -1;
+//         position: absolute; 
+//         top: 50%;           
+//         left: 50%;          
+//         min-width: 100%;    
+//         min-height: 100%;   
+//         width: auto;        
+//         height: auto;       
+//         transform: translate(-50%, -50%) scale(1.9); 
+        
+//         // @include m.phone_320 {
+//         //     transform: translate(-50%, -50%) scale(1.2); 
+//         // }
+//         // @include m.phone_375 {
+//         //     transform: translate(-50%, -50%) scale(1.2); 
+//         // }
+//         // @include m.phone_390 {
+//         //     // transform: scale(2.1);
+//         //     ransform: translate(-50%, -50%) scale(1.2);
+//         // }
+//         // @include m.tablet_768 {
+//         //     transform: scale(1.4);
+//         //     // transform: translate(-50%, -50%) scale(1.4); 
+//         // }
+//         // @include m.desktop_1200 {
+//         //     padding-top: 2.5rem;
+//         //     transform: scale(1.82);
+//         //     // transform: translate(-50%, -50%) scale(1.82);
+//         // }
+//         // @include m.desktop_1600 {
+//         //     padding-top: 3rem;
+//         //     transform: scale(2);    
+//         // }
+//         // @include m.desktop_1660 {
+//         //     padding-top: 5rem;
+//         //     transform: scale(2.1);
+//         // }
+//         // @include m.desktop_1900 {
+//         //     padding-top: 4rem;
+//         //     transform: scale(2.05);
+//         // }
+        
+//         @include m.phone_320 {
+//             transform: translate(-50%, -50%) scale(2); 
+//         }
+//         @include m.phone_375 {
+//             transform: translate(-50%, -50%) scale(2); 
+//         }
+//         @include m.phone_390 {
+//             // transform: scale(2.1);
+//             transform: translate(-50%, -50%) scale(2);
+//         }
+//         @include m.tablet_768 {
+//             transform: scale(2);
+//             // transform: translate(-50%, -50%) scale(1.4); 
+//         }
+      
+        
+//         @include m.desktop_1200 {
+//             padding-top: 2.5rem;
+//             transform: translate(-50%, -50%) scale(1); 
+//         }
+        
+//         @include m.desktop_1600 {
+//             padding-top: 3rem;
+//             transform: translate(-50%, -50%) scale(1); 
+//         }
+        
+//         @include m.desktop_1660 {
+//             padding-top: 5rem;
+//             transform: translate(-50%, -50%) scale(1); 
+//         }
+        
+//         @include m.desktop_1900 {
+//             padding-top: 4rem;
+//             transform: translate(-50%, -50%) scale(1); 
+//         }
+//     }
+// }
+
+// .bloque7Container {
+//     position: absolute;
+//     bottom: 0;
+//     left: 0;
+//     z-index: 100;
+//     // background-color: red;
+//     width: 100%;
+//     height: 100%;
+//     display: grid;
+//     justify-items: center;
+//     align-items: center;
+//     background-color: rgba(0, 0, 0, 0.411);
+//     h3 {
+//         z-index: 999;
+//         position: relative;
+//         margin: 0;
+//         color: white;
+//         font-size: 3rem;
+//         width: 80%;
+//         text-align: center;
+//         // -webkit-text-stroke: 1.5px black;
+//         line-height: 1;
+//         font-weight: 800;
+//         @include m.desktop_1020 {
+//             font-size: 5rem;
+//         }
+//         @include m.desktop_1600 {
+//             font-size: 5rem;
+//             width: 50%;
+            
+//         }
+//     }
+// }     
+
+
+
 .bloque7 {
-    // height:auto;
-    // background-color: red;
     overflow: hidden;
     position: relative;
     height: 60rem;
-    background-color: black; // Previene espacios grises visibles
+    background-color: black;
+
     @include m.phone_375 {
         height: 70rem;
     }
     @include m.phone_390 {
         height: 80rem;
     }
+
     @include m.desktop_1120 {
         height: 83rem;
     }
     @include m.desktop_1180 {
-        height: 87rem;   
+        height: 87rem;
     }
     @include m.desktop_1200 {
         max-height: 85rem;
-        // transform: scale(1.3);
     }
     @include m.desktop_1500 {
         max-height: 87rem;
@@ -31,55 +194,20 @@
         max-height: 90rem;
     }
     @include m.desktop_1660 {
-        // max-height: 20%;
-        min-height: 110rem;  
+        min-height: 110rem;
     }
-    video {
-        // height: 100%;
-        // width: 100%;
-        // transform: scale(1.9);
-        // z-index: -1;
-        position: absolute; // agrega esto
-        top: 50%;           // centra verticalmente
-        left: 50%;          // centra horizontalmente
-        min-width: 100%;    // asegura que cubra al menos todo el ancho
-        min-height: 100%;   // asegura que cubra al menos todo el alto
-        width: auto;        // auto-ajuste para mantener proporciones
-        height: auto;       // auto-ajuste para mantener proporciones
-        transform: translate(-50%, -50%) scale(1.9); // centrado perfecto y escala inicial
-        
-        // @include m.phone_320 {
-        //     transform: translate(-50%, -50%) scale(1.2); // más alejado para móvil pequeño
-        // }
-        // @include m.phone_375 {
-        //     transform: translate(-50%, -50%) scale(1.2); // ajusta según el resultado visual
-        // }
-        // @include m.phone_390 {
-        //     // transform: scale(2.1);
-        //     ransform: translate(-50%, -50%) scale(1.2);
-        // }
-        // @include m.tablet_768 {
-        //     transform: scale(1.4);
-        //     // transform: translate(-50%, -50%) scale(1.4); 
-        // }
-        // @include m.desktop_1200 {
-        //     padding-top: 2.5rem;
-        //     transform: scale(1.82);
-        //     // transform: translate(-50%, -50%) scale(1.82);
-        // }
-        // @include m.desktop_1600 {
-        //     padding-top: 3rem;
-        //     transform: scale(2);    
-        // }
-        // @include m.desktop_1660 {
-        //     padding-top: 5rem;
-        //     transform: scale(2.1);
-        // }
-        // @include m.desktop_1900 {
-        //     padding-top: 4rem;
-        //     transform: scale(2.05);
-        // }
-         
+
+    img {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        min-width: 100%;
+        min-height: 100%;
+        width: auto;
+        height: auto;
+        transform: translate(-50%, -50%) scale(1.9);
+        object-fit: cover;
+
         @include m.phone_320 {
             transform: translate(-50%, -50%) scale(1);
         }
@@ -90,27 +218,23 @@
             transform: translate(-50%, -50%) scale(1);
         }
         @include m.tablet_768 {
-            transform: translate(-50%, -50%) scale(1.1); // Aleja bastante respecto a 1.4 original
+            transform: scale(1);
         }
-        
         @include m.desktop_1200 {
             padding-top: 2.5rem;
-            transform: translate(-50%, -50%) scale(1.3); // Aleja considerablemente respecto a 1.82 original
+            transform: translate(-50%, -50%) scale(1);
         }
-        
         @include m.desktop_1600 {
             padding-top: 3rem;
-            transform: translate(-50%, -50%) scale(1.5); // Aleja respecto al 2 original
+            transform: translate(-50%, -50%) scale(1);
         }
-        
         @include m.desktop_1660 {
             padding-top: 5rem;
-            transform: translate(-50%, -50%) scale(1.6); // Aleja respecto al 2.1 original
+            transform: translate(-50%, -50%) scale(1);
         }
-        
         @include m.desktop_1900 {
             padding-top: 4rem;
-            transform: translate(-50%, -50%) scale(1.55); // Aleja respecto al 2.05 original
+            transform: translate(-50%, -50%) scale(1);
         }
     }
 }
@@ -120,13 +244,13 @@
     bottom: 0;
     left: 0;
     z-index: 100;
-    // background-color: red;
     width: 100%;
     height: 100%;
     display: grid;
     justify-items: center;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.411);
+
     h3 {
         z-index: 999;
         position: relative;
@@ -135,16 +259,15 @@
         font-size: 3rem;
         width: 80%;
         text-align: center;
-        // -webkit-text-stroke: 1.5px black;
         line-height: 1;
         font-weight: 800;
+
         @include m.desktop_1020 {
             font-size: 5rem;
         }
         @include m.desktop_1600 {
             font-size: 5rem;
             width: 50%;
-            
         }
     }
 }
